--- a/css/main.css
+++ b/css/main.css
@@ -236,6 +236,20 @@ ul.icons li a:hover:before {
     content: '\f099';
 }
 
+.cd-main{
+    display: inline-block;
+    padding: 0.6em 2em;
+    font-size: 1.4rem;
+    letter-spacing: .15em;
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: #a5c4bc;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+    -webkit-font-smoothing: antialiased;
+    transition: box-shadow 0.3s;
+}
+
 #footer{
     align-items: center;
     width: 100%;
