--- a/Main/css/Main_main.css
+++ b/Main/css/Main_main.css
@@ -1,3 +1,6 @@
+@import url(../../css/font-awesome.min.css);
+
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header,  menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -22,8 +25,34 @@ body{
     -webkit-font-smoothing: antialiased;
 }
 
+*, *:before, *:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+form{
+    margin: -1em 0  2em 0;
+}
+
+form:after {
+    content: '';
+    display: block;
+    clear: both;
+    height: 1px;
+}
+
 a{
     background: transparent;
+}
+
+h2{
+    font-size: 1.1em;
+    font-weight: 900;
+    line-height: 1.5;
+    margin: 0 0 2em 0;
+    text-transform: uppercase;
+    letter-spacing: 0.35em;
 }
 
 ul {
@@ -112,4 +141,136 @@ ul li{
         letter-spacing: 5px;
         color: rgb(87, 173, 104);
         margin-top: 20px;
+    }
+
+    .content{
+        margin: 0 auto;
+        max-width: 700px;
+        padding: 20px 40px;
+    }
+
+    .content > * > :last-child{
+        margin-bottom: 0;
+    }
+
+    .content section:nth-child(1){
+        width: 100%;
+    }
+
+    form .field{
+        position: relative;
+        float: left;
+        margin: 0 0 1.3em 0;
+        vertical-align: top;
+        width: 100%;
+    }
+
+    form .half.first{
+        width: calc(50% - 1em) !important;
+        padding-left: 0;
+    }
+
+    form .half{
+        width: calc(50% + 1em) !important;
+        padding-left: 2em;
+    }
+
+    form :last-child{
+        margin-bottom: 0;
+    }
+
+    form .actions{
+        position: relative;
+        clear: both;
+        padding-top: 1em;
+    }
+
+    input[type="text"], textarea{
+        height: 3em;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        -ms-appearance: none;
+        appearance: none;
+        background-color: transparent;
+        border: none;
+        border-radius: 0;
+        border-bottom: solid 1px #c9c9c9;
+        color: inherit;
+        display: block;
+        outline: 0;
+        padding: 0;
+        text-decoration: none;
+        width: 100%;
+    }
+
+    input[type="text"]:focus, textarea:focus {
+        border-bottom-color: #a5c4bc;
+        box-shadow: inset 0 -1px 0 0 #a5c4bc;
+    }
+
+    input[type="submit"].special{
+        box-shadow: none;
+        background-color: #585858;
+        color: #ffffff !important;
+    }
+
+    input[type="submit"].special:hover {
+        background-color: #a5c4bc;
+    }
+
+    input[type="submit"]{
+        -webkit-appearance: none;
+        transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        background-color: transparent;border-radius: 4px;
+        border: 0;
+        box-shadow: inset 0 0 0 2px #585858;
+        cursor: pointer;
+        display: inline-block;
+        font-size: 0.8em;
+        font-weight: 900;
+        height: 3.5em;
+        letter-spacing: 0.35em;
+        line-height: 3.45em;
+        overflow: hidden;
+        padding: 0 1.25em 0 1.6em;
+        text-align: center;
+        text-decoration: none;
+        text-overflow: ellipsis;
+        text-transform: uppercase;
+        white-space: nowrap;
+    }
+
+    input, textarea{
+        color: #585858;
+        font-family: "Source Sans Pro",Helvetica, sans-serif;
+        font-size: 16pt;
+        font-weight: 300;
+        line-height: 1.75;
+    }
+
+    textarea{
+        padding: 0;
+        min-height: 3.75em;
+    }
+
+    #message{
+        overflow: hidden;
+        resize: none;
+        height: 69px;
+    }
+
+    ul.actions{
+        cursor: default;
+        list-style: none;
+        padding-left: 0;
+    }
+
+    ul.actions li:last-child{
+        padding-right: 0;
+    }
+
+    ul.actions li{
+        display: inline-block;
+        padding: 0 1em 0 0;
+        vertical-align: middle;
     }
