--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url(font-awesome.min.css);
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:300");
+@import url("http://fonts.lug.ustc.edu.cn/css?family=Source+Sans+Pro:300");
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header,  menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
@@ -108,7 +108,7 @@ a:before{
     padding: 4.5em 3em 3em 3em;
     background: #ffffff;
     border-radius: 4px;
-    opacity: 0.95;
+    opacity: 0.93;
     text-align: center;
     -moz-transform-origin: 50% 50%;
     -webkit-transform-origin: 50% 50%;
