--- a/calendar/style.css
+++ b/calendar/style.css
@@ -1,7 +1,8 @@
 #calendar-container{
     padding: 10px;
-    width: 210px;
-    height: 210px;
+    width: 600px;
+    height: auto;
+    min-height: 210px;
     text-align: center;
     border: 1px solid #eee;
     border-radius: 10px;
@@ -21,5 +22,11 @@
 
 #calendar-dates>table>tr>td{
     padding: 5px;
+    width: 50px;
+    height: 50px;
+}
 
+table{
+    table-layout: fixed;
+    width: 600px;
 }
