--- a/Resources/resource.css
+++ b/Resources/resource.css
@@ -16,7 +16,7 @@ ul li {
 
 .items-gallery li {
     width: 23.076923%;
-    margin-right: 2.56410267%;
+    margin-right: 1.9%;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
     float: left;
     border-radius: 0.25em;
@@ -63,6 +63,10 @@ ul li {
     background-color: #5b927d;
 }
 
+.item-grid {
+    background-color: #19a197;
+}
+
 .item-info a {
     display: block;
     text-decoration: none;
@@ -78,7 +82,11 @@ ul li {
     color: #ffffff;
 }
 
-.item-pie i {
+.item-grid a em {
+    color: #ffffff;
+}
+
+.item-pie,.item-grid i {
     color: #ffffff;
 }
 
