--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,12 @@ html{
     height: 100%;
 }
 
+@media screen and (max-width: 480px) {
+    html, body {
+        min-width: 320px;
+    }
+}
+
 body{
     height: 100%;
     background-color: #ffffff;
@@ -35,6 +41,12 @@ body{
     letter-spacing: 0.2em;
     text-transform: uppercase;
     font-size: 11pt;
+}
+@media screen and (max-width: 480px) {
+    body {
+        font-size: 10pt;
+        line-height: 1.75;
+    }
 }
 
 body:after {
@@ -59,6 +71,11 @@ h1{
     font-size: 1.85em;
     letter-spacing: 0.22em;
     margin: 0 0 0.525em 0;
+}
+@media screen and (max-width: 480px) {
+    h1 {
+        font-size: 1.65em;
+    }
 }
 
 p{
@@ -91,6 +108,11 @@ a:before{
     padding: 1.5em;
     z-index: 2;
 }
+@media screen and (max-width: 360px){
+    #wrapper {
+        padding: 0.75em;
+    }
+}
 
 #wrapper:before{
     content: '';
@@ -122,6 +144,17 @@ a:before{
     -webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
     -ms-transition: opacity 1s ease, -ms-transform 1s ease;
     transition: opacity 1s ease, transform 1s ease;
+}
+@media screen and (max-width: 480px){
+    #main {
+        min-width: 0;
+        width: 100%;
+        padding: 4em 2em 2.5em 2em;
+    }
+    #main .avatar:before {
+        left: -2em;
+        width: calc(100% + 4em);
+    }
 }
 
 body.is-loading #main {
