--- a/Main/css/Main_main.css
+++ b/Main/css/Main_main.css
@@ -64,6 +64,17 @@ ul li{
     line-height: 1.5em;
 }
 
+::selection
+{
+    color: #ffffff;
+    background-color: #4d4d4d;
+}
+::-moz-selection
+{
+    color: #ffffff;
+    background-color: #4d4d4d;
+}
+
 mark{
     background-color: #a5c4bc;
     border-radius: 4px;
