resource display flex

--- a/Main/css/Main_main.css
+++ b/Main/css/Main_main.css
@@ -64,6 +64,11 @@ ul li{
     line-height: 1.5em;
 }
 
+.items-gallery {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 ::selection
 {
     color: #ffffff;
