--- a/Main/css/Main_main.css
+++ b/Main/css/Main_main.css
@@ -367,3 +367,151 @@ mark{
     .icon > .label{
         display: none;
     }
+
+
+
+.items-gallery li {
+    line-height: 1.5em;
+    list-style-type: none;
+}
+
+.main {
+    margin-top: 40px;
+}
+
+.container {
+    width: 90%;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
+.items-gallery li {
+    width: 23.076923%;
+    margin-right: 1.9%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    float: left;
+    border-radius: 0.25em;
+    background: #ffffff;
+    margin-bottom: 30px;
+}
+
+.items-gallery li:nth-child(5) {
+
+}
+
+.item-image {
+    height: 0;
+    padding-bottom: 67%;
+    background: transparent;
+}
+
+.item-image a {
+    display: block;
+    backface-visibility: hidden;
+    transition: opacity 0.2s;
+}
+
+.item-image a:hover {
+    opacity: 0.9;
+}
+
+.item-image a img {
+    border-radius: .25em .25em 0 0;
+    display: block;
+    width: 100%;
+}
+
+.item-info {
+    padding: .7em 0.9em;
+    width: 100%;
+    border-radius: 0 0 .25em .25em;
+}
+
+.item-hover {
+    background-color: #a4c4bc;
+}
+
+.item-calendar {
+    background-color: #9dc997;
+}
+
+.item-pie {
+    background-color: #5b927d;
+}
+
+.item-grid {
+    background-color: #19a197;
+}
+
+.item-cal {
+    background-color: #f3b96c;
+}
+
+.item-com{
+    background-color: #c0a672;
+}
+.item-360{
+    background-color: #b7413d;
+}
+.item-menu{
+    background-color: #fede9a;
+}
+
+.item-info a {
+    display: block;
+    text-decoration: none;
+    font-size: 100%;
+    font: inherit;
+    margin: 0;
+    padding: 0;
+    line-height: 17px;
+    margin-bottom: -10px;
+}
+
+.item-pie a em {
+    color: #ffffff;
+}
+
+.item-grid a em {
+    color: #ffffff;
+}
+
+.item-cal a em {
+    color: #ffffff;
+}
+
+.item-com a em {
+    color: #ffffff;
+}
+.item-360 a em {
+    color: #ffffff;
+}
+
+.item-pie,.item-grid,.item-cal,.item-com, .item-360, i {
+    color: #ffffff;
+}
+
+.item-info em {
+    font-size: 0.9375rem;
+    font-weight: bold;
+    display: block;
+    width: 100%;
+    overflow: hidden;
+    padding-bottom: .2em;
+    white-space: nowrap;
+    opacity: 1;
+    text-transform: capitalize;
+    transition: opacity 0.2s;
+    color: #383838;
+}
+
+.item-info em:hover {
+    opacity: 0.8;
+}
+
+.item-info i {
+    opacity: 0.6;
+    font-size: 0.6875rem;
+    font-style: italic;
+    font-family: "Merriweather", georgia, serif;
+}
