--- a/Main/css/Main_main.css
+++ b/Main/css/Main_main.css
@@ -168,6 +168,7 @@ mark{
 
     .content{
         margin: 0 auto;
+        margin-bottom: 100px;
         max-width: 700px;
         padding: 20px 40px;
     }
